testsuite/tests/properties/invalid_bind/unbound_dynvar/test.lkt
from common import FooNode

dynvar dyn_node2: FooNode

class BazNode: FooNode {
    @with_dynvars(dyn_node2)
    fun conv_prop(): Entity[FooNode] = dyn_node2.as_bare_entity
}
